@@ -2,15 +2,12 @@ package de.melanx.skyguis.client.screen.notification;
 
 import de.melanx.skyguis.client.screen.BaseScreen;
 import de.melanx.skyguis.client.screen.base.NotificationScreen;
-import de.melanx.skyguis.client.widget.LoadingCircle;
 import de.melanx.skyguis.util.ComponentBuilder;
 import de.melanx.skyguis.util.TextHelper;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.client.gui.components.Button;
-import net.minecraft.client.gui.components.Renderable;
 import net.minecraft.network.chat.Component;
-import org.moddingx.libx.render.RenderHelper;
 
 import javax.annotation.Nonnull;
 import java.awt.Color;
@@ -37,7 +34,7 @@ public class YouSureScreen extends NotificationScreen {
     }
 
     public YouSureScreen(BaseScreen parent, List<Component> components, BaseScreen.OnConfirm onConfirm, BaseScreen.OnAbort onAbort) {
-        super(components.get(0), YouSureScreen.longestComponent(components) + 30, 80 + ((components.size() - 1) * 16), onConfirm, onAbort);
+        super(components.getFirst(), YouSureScreen.longestComponent(components) + 30, 80 + ((components.size() - 1) * 16), onConfirm, onAbort);
         this.parent = parent;
         this.components = components;
     }
@@ -46,32 +43,18 @@ public class YouSureScreen extends NotificationScreen {
     protected void init() {
         this.addRenderableWidget(Button.builder(CONFIRM, (button -> {
                     this.onConfirm.onConfirm();
-                    LoadingCircle loadingCircle = this.parent.getLoadingCircle();
-                    if (loadingCircle != null) {
-                        loadingCircle.setActive(true);
-                    }
                     this.parent.onClose();
                 }))
                 .bounds(this.centeredX(50) - 30, this.y(this.ySize - 35), 50, 20)
                 .build());
-        this.addRenderableWidget(Button.builder(ABORT, (button -> {
-                    this.onAbort.onAbort();
-                    this.onClose();
-                }))
+        this.addRenderableWidget(Button.builder(ABORT, (button -> this.onAbort.onAbort()))
                 .bounds(this.centeredX(50) + 30, this.y(this.ySize - 35), 50, 20)
                 .build());
     }
 
     @Override
-    public void render_(@Nonnull GuiGraphics guiGraphics, int mouseX, int mouseY, float partialTick) {
-        this.renderBackground(guiGraphics);
-        RenderHelper.renderGuiBackground(guiGraphics, this.relX, this.relY, this.xSize, this.ySize, BaseScreen.GENERIC, 128, 64, 4, 125, 4, 60);
-
-        for (Renderable renderable : this.renderables) {
-            renderable.render(guiGraphics, mouseX, mouseY, partialTick);
-        }
-
-        for (int i = 0; i < this.components.size(); i++) {
+    public void renderForeground(@Nonnull GuiGraphics guiGraphics, int mouseX, int mouseY, float partialTick) {
+        for (int i = 1; i < this.components.size(); i++) {
             Component component = this.components.get(i);
             guiGraphics.drawString(this.font, component, this.centeredX(this.font.width(component.getVisualOrderText())), this.y((i + 1) * 16), Color.DARK_GRAY.getRGB(), false);
         }
